--- a/package.json
+++ b/package.json
@@ -34,28 +34,32 @@
     "react": "16.8.6",
     "react-native": "0.60.6",
     "react-native-autocomplete-input": "^3.5.0",
-    "react-native-background-timer": "^1.3.0",
-    "react-native-device-info": "^0.21.5",
-    "react-native-document-picker": "^2.1.0",
-    "react-native-fbsdk": "^0.6.3",
+    "react-native-background-timer": "^2.2.0",
+    "react-native-device-info": "^0.29.1",
+    "react-native-document-picker": "^2.0.0",
+
+    "react-native-fbsdk": "^1.0.0",
+    "react-native-intercom": "^15.0.0",
+    "@sentry/react-native": "^1.3.9",
+    "react-native-onesignal": "^3.7.3",
+    "@react-native-community/google-signin": "^4.0.3",
+    "react-native-mixpanel": "^1.2.0",
+    "@react-native-community/netinfo": "^5.9.0",
+    
+    "react-native-webview-bridge-updated": "Hylozoic/react-native-webview-bridge#62f520e",
+    "react-native-zss-rich-text-editor": "Hylozoic/react-native-zss-rich-text-editor#7c1b9c5",
+
     "react-native-gesture-handler": "^1.0.0-alpha.41",
-    "react-native-google-signin": "https://github.com/njt1982/react-native-google-signin#1c99bcf",
     "react-native-htmlview": "^0.12.0",
-    "react-native-image-picker": "^0.26.7",
-    "react-native-intercom": "10.2.0",
+    "react-native-image-picker": "^1.1.0",
     "react-native-linear-gradient": "2.4.0",
-    "react-native-mixpanel": "^1.1.1",
-    "react-native-onesignal": "^3.1.0",
-    "react-native-prompt-android": "^0.3.1",
-    "react-native-restart": "^0.0.4",
+    "react-native-prompt-android": "^1.0.0",
+    "react-native-restart": "^0.0.17",
     "react-native-root-toast": "^3.0.1",
-    "react-native-sentry": "^0.35.3",
     "react-native-tab-navigator": "^0.3.4",
     "react-native-tab-view": "^0.0.74",
     "react-native-triangle": "^0.0.9",
-    "react-native-vector-icons": "^4.5.0",
-    "react-native-webview-bridge-updated": "Hylozoic/react-native-webview-bridge#62f520e",
-    "react-native-zss-rich-text-editor": "Hylozoic/react-native-zss-rich-text-editor#7c1b9c5",
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^1.2",
     "react-navigation-is-focused-hoc": "Hylozoic/react-navigation-is-focused-hoc#multiple-set-state",
     "react-redux": "^5.0.6",
@@ -76,6 +80,7 @@
     "@react-native-community/eslint-config": "^1.1.0",
     "babel-jest": "^26.0.1",
     "babel-plugin-inline-dotenv": "^1.1.2",
+    "babel-plugin-module-resolver": "^4.0.0",
     "babel-plugin-remove-style": "^0.1.0",
     "babel-plugin-transform-inline-environment-variables": "^0.2.0",
     "babel-plugin-transform-remove-console": "^6.9.0",
