--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,48 +1,39 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext {
+        buildToolsVersion = "28.0.3"
+        minSdkVersion = 21
+        compileSdkVersion = 28
+        targetSdkVersion = 28
+        supportLibVersion = "28.0.0"
+    }
     repositories {
+        google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0'
-        classpath 'com.google.gms:google-services:3.0.0'
-    }
-}
+        classpath("com.android.tools.build:gradle:3.4.1")
 
-project(':react-native-fbsdk') {
-  configurations.all {
-    resolutionStrategy {
-      force 'com.facebook.android:facebook-android-sdk:4.22.1'
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
     }
-  }
 }
 
 allprojects {
     repositories {
         mavenLocal()
-        // Temporary fix, see: 
-        // https://github.com/zo0r/react-native-push-notification/issues/748#issuecomment-392523852
-        maven { url 'https://maven.google.com' }
-        jcenter()
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
-            url "$rootDir/../node_modules/react-native/android"
+            url("$rootDir/../node_modules/react-native/android")
         }
-        configurations.all {
-            resolutionStrategy {
-              force 'com.facebook.android:facebook-android-sdk:4.22.1'
-            }
+        maven {
+            // Android JSC is installed from npm
+            url("$rootDir/../node_modules/jsc-android/dist")
         }
-    }
-}
+        maven { url "https://maven.google.com" }
 
-subprojects {
-    afterEvaluate {project ->
-        if (project.hasProperty("android")) {
-            android {
-                buildToolsVersion '26.0.2'
-            }
-        }
+        google()
+        jcenter()
     }
 }
