--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "postinstall": "(find node_modules -type f -name .babelrc | grep -v /react-native/ | xargs rm) || true"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.10.3",
+    "@react-native-community/google-signin": "^4.0.3",
+    "@react-native-community/netinfo": "^5.9.0",
+    "@sentry/react-native": "^1.3.9",
     "cheerio": "0.22.0",
     "ent": "^2.2.0",
     "hylo-utils": "https://github.com/Hylozoic/hylo-utils#a1f23db",
@@ -37,22 +41,14 @@
     "react-native-background-timer": "^2.2.0",
     "react-native-device-info": "^0.29.1",
     "react-native-document-picker": "^2.0.0",
-
     "react-native-fbsdk": "^1.0.0",
-    "react-native-intercom": "^15.0.0",
-    "@sentry/react-native": "^1.3.9",
-    "react-native-onesignal": "^3.7.3",
-    "@react-native-community/google-signin": "^4.0.3",
-    "react-native-mixpanel": "^1.2.0",
-    "@react-native-community/netinfo": "^5.9.0",
-    
-    "react-native-webview-bridge-updated": "Hylozoic/react-native-webview-bridge#62f520e",
-    "react-native-zss-rich-text-editor": "Hylozoic/react-native-zss-rich-text-editor#7c1b9c5",
-
     "react-native-gesture-handler": "^1.6.1",
     "react-native-htmlview": "^0.12.0",
     "react-native-image-picker": "^1.1.0",
+    "react-native-intercom": "^15.0.0",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-mixpanel": "^1.2.0",
+    "react-native-onesignal": "^3.7.3",
     "react-native-prompt-android": "^1.0.0",
     "react-native-restart": "^0.0.17",
     "react-native-root-toast": "^3.0.1",
@@ -60,6 +56,8 @@
     "react-native-tab-view": "^0.0.74",
     "react-native-triangle": "^0.0.9",
     "react-native-vector-icons": "^6.6.0",
+    "react-native-webview": "^9.4.0",
+    "react-native-zss-rich-text-editor": "Hylozoic/react-native-zss-rich-text-editor#merge-jb-updates-for-rn-0.61.5",
     "react-navigation": "^1.2",
     "react-navigation-is-focused-hoc": "Hylozoic/react-navigation-is-focused-hoc#multiple-set-state",
     "react-redux": "^5.0.6",
@@ -79,18 +77,18 @@
     "@babel/runtime": "^7.9.6",
     "@react-native-community/eslint-config": "^1.1.0",
     "babel-jest": "^26.0.1",
-    "babel-plugin-inline-dotenv": "^1.1.2",
+    "babel-plugin-inline-dotenv": "^1.5.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-plugin-remove-style": "^0.1.0",
-    "babel-plugin-transform-inline-environment-variables": "^0.2.0",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "babel-plugin-transform-remove-console": "^6.9.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "eslint": "^7.1.0",
+    "faker": "^4.1.0",
     "jest": "^26.0.1",
+    "jest-simple-reporter": "^0.1.0",
     "metro-react-native-babel-preset": "^0.59.0",
     "react-test-renderer": "16.8.6",
-    "faker": "^4.1.0",
-    "jest-simple-reporter": "^0.1.0",
     "remote-redux-devtools": "^0.5.12",
     "reselect-tools": "^0.0.6",
     "standard": "^11.0.1",
