--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "path-match": "^1.2.4",
     "path-to-regexp": "^2.0.0",
     "prop-types": "^15.6.0",
-    "re-reselect": "^2.0.0",
+    "reselect": "^2.5.4",
+    "re-reselect": "^2.3.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-autocomplete-input": "^3.5.0",
@@ -58,9 +59,9 @@
     "react-native-vector-icons": "^6.6.0",
     "react-native-webview": "^9.4.0",
     "react-native-zss-rich-text-editor": "Hylozoic/react-native-zss-rich-text-editor#merge-jb-updates-for-rn-0.61.5",
-    "react-navigation": "^1.2",
+    "react-navigation": "1.5.11",
     "react-navigation-is-focused-hoc": "Hylozoic/react-navigation-is-focused-hoc#multiple-set-state",
-    "react-redux": "^5.0.6",
+    "react-redux": "^5.1.2",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-orm": "Hylozoic/redux-orm#createclass2-dist",
