--- a/ios/HyloReactNative-tvOS/Info.plist
+++ b/ios/HyloReactNative-tvOS/Info.plist
@@ -33,8 +33,8 @@
 			</dict>
 		</dict>
 	</dict>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string />
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>We would like to access your location to provide notifications of nearby resources.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
