--- a/ios/HyloReactNative/Info.plist
+++ b/ios/HyloReactNative/Info.plist
@@ -22,6 +22,10 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>12</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Allow access to your location for use in geo-coding notifications when running in the background</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Allow access to your location for use in geo-coding notifications when using application</string>
 	<key>FacebookAdvertiserIDCollectionEnabled</key>
 	<false/>
 	<key>FacebookAutoLogAppEventsEnabled</key>
