--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "js-htmlencode": "^0.3.0",
     "lodash": "^4.17.13",
     "parse": "^1.9.2",
-    "path-match": "^1.2.4",
+    "path-match": "1.2.3",
     "path-to-regexp": "^2.0.0",
     "prop-types": "^15.6.0",
     "re-reselect": "^2.3.0",
