Quick and dirty CircleCI config update

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,12 +64,14 @@ jobs:
     - run:
         command: bundle install
         working_directory: ios
+    - run:
+        command: pod install
+        working_directory: ios
     # This is based on your 1.0 configuration file or project settings
     # # Install yarn so it's up to date
     # - run: sudo apt-get update && sudo apt-get install yarn
     # This is based on your 1.0 configuration file or project settings
     - run: yarn
-    - run: cd ios && bundle && pod install && cd ..
     # Save dependency cache
     - save_cache:
         key: v1-dep-{{ .Branch }}-{{ checksum "yarn.lock" }}-{{ epoch }}
