--- a/ios/HyloReactNative/Info.plist
+++ b/ios/HyloReactNative/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>HyloReactNative</string>
+	<string>$(PRODUCT_NAME)</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -22,33 +22,33 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>15</string>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>Allow access to your location for use in geo-coding notifications when running in the background</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Allow access to your location for use in geo-coding notifications when using application</string>
 	<key>FacebookAdvertiserIDCollectionEnabled</key>
-	<false />
+	<false/>
 	<key>FacebookAutoLogAppEventsEnabled</key>
-	<false />
+	<false/>
 	<key>ITSAppUsesNonExemptEncryption</key>
-	<false />
+	<false/>
 	<key>LSRequiresIPhoneOS</key>
-	<true />
+	<true/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
-		<true />
+		<true/>
 		<key>NSExceptionDomains</key>
 		<dict>
 			<key>localhost</key>
 			<dict>
 				<key>NSExceptionAllowsInsecureHTTPLoads</key>
-				<true />
+				<true/>
 			</dict>
 		</dict>
 	</dict>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>We would like to access your location to provide notifications of nearby resources.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Allow access to your location for use in geo-coding notifications when running in the background</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Allow access to your location for use in geo-coding notifications when using application</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Send photos to help resolve app issues</string>
 	<key>UIAppFonts</key>
@@ -85,6 +85,8 @@
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
+	<key>UIUserInterfaceStyle</key>
+	<string>Light</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
@@ -96,6 +98,6 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<false />
+	<false/>
 </dict>
 </plist>
