--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "hylo-utils": "https://github.com/Hylozoic/hylo-utils#a1f23db",
     "js-htmlencode": "^0.3.0",
     "lodash": "^4.17.13",
+    "moment": "^2.27.0",
     "parse": "^1.9.2",
     "path-match": "1.2.3",
     "path-to-regexp": "^2.0.0",
@@ -40,6 +41,7 @@
     "react-native": "0.61.5",
     "react-native-autocomplete-input": "^3.5.0",
     "react-native-background-timer": "^2.2.0",
+    "react-native-date-picker": "^2.7.12",
     "react-native-device-info": "^0.29.1",
     "react-native-document-picker": "^2.0.0",
     "react-native-fbsdk": "^1.1.2",
