--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "hylo-utils": "https://github.com/Hylozoic/hylo-utils#a1f23db",
     "js-htmlencode": "^0.3.0",
     "lodash": "^4.17.13",
+    "moment": "^2.27.0",
     "parse": "^1.9.2",
     "path-match": "1.2.3",
     "path-to-regexp": "^2.0.0",
