--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "postversion": "react-native-version"
   },
   "dependencies": {
+    "@invertase/react-native-apple-authentication": "^1.1.2",
     "@react-native-community/async-storage": "^1.10.3",
     "@react-native-community/google-signin": "^4.0.3",
     "@react-native-community/netinfo": "^5.9.0",
@@ -84,6 +85,7 @@
     "babel-plugin-inline-dotenv": "^1.5.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-plugin-remove-style": "^0.1.0",
+    "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "babel-plugin-transform-remove-console": "^6.9.0",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -99,8 +101,7 @@
     "standard": "^11.0.1",
     "timezone-mock": "^0.0.6",
     "validator": "^8.0.0",
-    "why-did-you-update": "^0.1.1",
-    "babel-plugin-syntax-jsx": "^6.18.0"
+    "why-did-you-update": "^0.1.1"
   },
   "jest": {
     "preset": "react-native",
