--- a/ios/HyloReactNative/Info.plist
+++ b/ios/HyloReactNative/Info.plist
@@ -26,6 +26,17 @@
 	<false />
 	<key>FacebookAutoLogAppEventsEnabled</key>
 	<false />
+	<key>FacebookAppID</key>
+	<string>${FACEBOOK_APP_ID}</string>
+	<key>FacebookDisplayName</key>
+	<string>Hylo</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>fbapi</string>
+		<string>fb-messenger-api</string>
+		<string>fbauth2</string>
+		<string>fbshareextension</string>
+	</array>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false />
 	<key>LSRequiresIPhoneOS</key>
