--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -220,7 +220,8 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation 'io.intercom.android:intercom-sdk:6.+'
-
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
+    
     if (enableHermes) {
         def hermesPath = "../../node_modules/hermes-engine/android/";
         debugImplementation files(hermesPath + "hermes-debug.aar")
@@ -243,3 +244,5 @@ project.afterEvaluate {
     apply from: '../../node_modules/react-native-zss-rich-text-editor/htmlCopy.gradle';
     copyEditorHtmlToAppAssets(file('../../node_modules/react-native-zss-rich-text-editor'))
 }
+
+apply plugin: 'com.google.gms.google-services'
