--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "codecov": "codecov -t b30663d3-771b-4b16-b030-0a0a56b335e3",
     "android:prod": "cd android && ./gradlew assembleRelease",
     "android:usb": "adb -d install -r android/app/build/outputs/apk/app-release.apk",
-    "ios": "react-native run-ios",
+    "ios": "react-native run-ios --simulator=\"iPhone 11 Pro Max\"",
     "ios:devices": "cd ios && bundle exec fastlane devices",
     "ios:testflight": "cd ios && bundle exec fastlane beta",
     "ios:qa": "cd ios && bundle exec fastlane qa",
