--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "react-native-device-info": "^6.0.3",
     "react-native-document-picker": "^2.0.0",
     "react-native-fbsdk": "^2.0.0",
-    "react-native-gesture-handler": "^1.6.1",
+    "react-native-gesture-handler": "^1.9.0",
     "react-native-htmlview": "^0.16.0",
     "react-native-image-picker": "^1.1.0",
     "react-native-intercom": "^15.0.0",
@@ -54,16 +54,17 @@
     "react-native-mixpanel": "^1.2.0",
     "react-native-onesignal": "^3.7.3",
     "react-native-prompt-android": "^1.0.0",
-    "react-native-reanimated": "^1.9.0",
+    "react-native-reanimated": "^1.13.2",
     "react-native-restart": "^0.0.17",
     "react-native-root-toast": "^3.0.1",
+    "react-native-screens": "^2.15.0",
     "react-native-tab-navigator": "^0.3.4",
     "react-native-tab-view": "^2.15.0",
     "react-native-triangle": "^0.0.9",
     "react-native-vector-icons": "^6.6.0",
     "react-native-webview": "^9.4.0",
     "react-native-zss-rich-text-editor": "Hylozoic/react-native-zss-rich-text-editor#merge-jb-updates-for-rn-0.61.5",
-    "react-navigation": "2.18.3",
+    "react-navigation": "3.13.0",
     "react-navigation-is-focused-hoc": "Hylozoic/react-navigation-is-focused-hoc#multiple-set-state",
     "react-redux": "^5.1.2",
     "redux": "^3.7.2",
