--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "react-native-reanimated": "^1.13.2",
     "react-native-restart": "^0.0.17",
     "react-native-root-toast": "^3.0.1",
+    "react-native-safe-area-context": "^3.1.9",
+    "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^2.15.0",
     "react-native-tab-navigator": "^0.3.4",
     "react-native-tab-view": "^2.15.0",
@@ -64,7 +66,11 @@
     "react-native-vector-icons": "^6.6.0",
     "react-native-webview": "^9.4.0",
     "react-native-zss-rich-text-editor": "Hylozoic/react-native-zss-rich-text-editor#merge-jb-updates-for-rn-0.61.5",
-    "react-navigation": "3.13.0",
+    "react-navigation": "^4.4.3",
+    "react-navigation-drawer": "^2.6.0",
+    "react-navigation-stack": "^2.10.2",
+    "react-navigation-tabs": "^2.10.1",
+    "@react-native-community/masked-view": "^0.1.10",
     "react-navigation-is-focused-hoc": "Hylozoic/react-navigation-is-focused-hoc#multiple-set-state",
     "react-redux": "^5.1.2",
     "redux": "^3.7.2",
