--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@invertase/react-native-apple-authentication": "^1.1.2",
     "@react-native-community/async-storage": "^1.10.3",
     "@react-native-community/google-signin": "^4.0.3",
+    "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/netinfo": "^5.9.0",
     "@sentry/react-native": "^1.4.5",
     "cheerio": "0.22.0",
@@ -46,6 +47,7 @@
     "react-native-device-info": "^6.0.3",
     "react-native-document-picker": "^2.0.0",
     "react-native-fbsdk": "^2.0.0",
+    "react-native-flipper": "^0.68.0",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-htmlview": "^0.16.0",
     "react-native-image-picker": "^1.1.0",
@@ -68,12 +70,12 @@
     "react-native-zss-rich-text-editor": "Hylozoic/react-native-zss-rich-text-editor#merge-jb-updates-for-rn-0.61.5",
     "react-navigation": "^4.4.3",
     "react-navigation-drawer": "^2.6.0",
+    "react-navigation-is-focused-hoc": "Hylozoic/react-navigation-is-focused-hoc#multiple-set-state",
     "react-navigation-stack": "^2.10.2",
     "react-navigation-tabs": "^2.10.1",
-    "@react-native-community/masked-view": "^0.1.10",
-    "react-navigation-is-focused-hoc": "Hylozoic/react-navigation-is-focused-hoc#multiple-set-state",
-    "react-redux": "^5.1.2",
-    "redux": "^3.7.2",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-flipper": "^1.4.2",
     "redux-logger": "^3.0.6",
     "redux-orm": "Hylozoic/redux-orm#createclass2-dist",
     "redux-promise": "^0.5.3",
