--- a/package.json
+++ b/package.json
@@ -27,6 +27,11 @@
     "@react-native-community/google-signin": "^4.0.3",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/netinfo": "^5.9.0",
+    "@react-navigation/bottom-tabs": "^5.11.2",
+    "@react-navigation/compat": "^5.3.10",
+    "@react-navigation/drawer": "^5.11.4",
+    "@react-navigation/native": "^5.8.10",
+    "@react-navigation/stack": "^5.12.8",
     "@sentry/react-native": "^1.4.5",
     "cheerio": "0.22.0",
     "ent": "^2.2.0",
@@ -40,6 +45,7 @@
     "prop-types": "^15.6.0",
     "re-reselect": "^2.3.0",
     "react": "16.13.1",
+    "react-async-hook": "^3.6.2",
     "react-native": "0.63.4",
     "react-native-autocomplete-input": "^3.5.0",
     "react-native-background-timer": "^2.2.0",
@@ -68,11 +74,6 @@
     "react-native-vector-icons": "^6.6.0",
     "react-native-webview": "^9.4.0",
     "react-native-zss-rich-text-editor": "Hylozoic/react-native-zss-rich-text-editor#merge-jb-updates-for-rn-0.61.5",
-    "react-navigation": "^4.4.3",
-    "react-navigation-drawer": "^2.6.0",
-    "react-navigation-is-focused-hoc": "Hylozoic/react-navigation-is-focused-hoc#multiple-set-state",
-    "react-navigation-stack": "^2.10.2",
-    "react-navigation-tabs": "^2.10.1",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-flipper": "^1.4.2",
