--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
     "@babel/core": "^7.8.4",
     "@babel/runtime": "^7.8.4",
     "@react-native-community/eslint-config": "^1.1.0",
-    "babel-jest": "^25.1.0",
+    "babel-jest": "^26.6.3",
     "babel-plugin-inline-dotenv": "^1.5.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-plugin-remove-style": "^0.1.0",
@@ -101,14 +101,15 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "eslint": "^6.5.1",
     "faker": "^4.1.0",
-    "jest": "^25.1.0",
+    "jest": "^26.6.2",
+    "jest-environment-node": "^26.6.2",
     "jest-simple-reporter": "^0.1.0",
     "metro-react-native-babel-preset": "^0.64.0",
     "react-native-version": "^4.0.0",
     "react-test-renderer": "^17.0.1",
     "remote-redux-devtools": "^0.5.16",
     "reselect-tools": "^0.0.6",
-    "standard": "^11.0.1",
+    "standard": "^16.0.3",
     "timezone-mock": "^0.0.6",
     "validator": "^8.0.0"
   },
