Upgrade Apple login depedency, revise basic depedencies to be in accordance with React Native 0.63.4, Add react-testing-library and initial test

--- a/package.json
+++ b/package.json
@@ -3,23 +3,24 @@
   "version": "2.5.0",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
     "android": "react-native run-android",
     "android:device": "adb reverse tcp:3001 tcp:3001 && react-native run-android",
     "android:build": "yarn run android:prod && yarn run android:usb",
+    "clean-start": "./scripts/clean-rebuild.sh",
     "codecov": "codecov -t b30663d3-771b-4b16-b030-0a0a56b335e3",
+    "configure": "./scripts/configure.sh",
+    "coverage:diff": "node ../jest-diff-coverage && open coverage/lcov-report/index.html",
     "android:prod": "cd android && ./gradlew assembleRelease",
     "android:usb": "adb -d install -r android/app/build/outputs/apk/app-release.apk",
     "ios": "react-native run-ios --simulator=\"iPhone 11 Pro Max\"",
     "ios:devices": "cd ios && bundle exec fastlane devices",
     "ios:testflight": "cd ios && bundle exec fastlane beta",
     "ios:qa": "cd ios && bundle exec fastlane qa",
-    "test": "standard && jest",
-    "coverage:diff": "node ../jest-diff-coverage && open coverage/lcov-report/index.html",
-    "clean-start": "./scripts/clean-rebuild.sh",
-    "configure": "./scripts/configure.sh",
+    "lint": "standard",
     "postinstall": "(find node_modules -type f -name .babelrc | grep -v /react-native/ | xargs rm) || true",
-    "postversion": "react-native-version"
+    "postversion": "react-native-version",
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "test": "jest"
   },
   "dependencies": {
     "@invertase/react-native-apple-authentication": "^2.1.0",
@@ -80,7 +81,7 @@
     "redux-orm": "Hylozoic/redux-orm#createclass2-dist",
     "redux-promise": "^0.5.3",
     "reselect": "^2.5.4",
-    "rn-round-checkbox": "^0.3.4",
+    "rn-round-checkbox": "^1.0.0",
     "sails.io.js": "1.1.10",
     "socket.io-client": "^2.0.3",
     "striptags": "~2",
@@ -93,7 +94,7 @@
     "@react-native-community/eslint-config": "^1.1.0",
     "@testing-library/jest-native": "^3.4.3",
     "@testing-library/react-native": "^7.1.0",
-    "babel-jest": "^26.6.3",
+    "babel-jest": "^25.1.0",
     "babel-plugin-inline-dotenv": "^1.5.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-plugin-remove-style": "^0.1.0",
@@ -103,12 +104,12 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "eslint": "^6.5.1",
     "faker": "^4.1.0",
-    "jest": "^26.6.2",
+    "jest": "^25.1.0",
     "jest-environment-node": "^26.6.2",
     "jest-simple-reporter": "^0.1.0",
-    "metro-react-native-babel-preset": "^0.64.0",
+    "metro-react-native-babel-preset": "^0.59.0",
     "react-native-version": "^4.0.0",
-    "react-test-renderer": "^17.0.1",
+    "react-test-renderer": "16.13.1",
     "remote-redux-devtools": "^0.5.16",
     "reselect-tools": "^0.0.6",
     "standard": "^16.0.3",
